# facet-scanner

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  requirements_fix.txt  setup.py
.github/workflows/: test.yml
cci_facet_scanner/collection_handlers/: base.py  cci.py  cmip5.py
cci_facet_scanner/collection_handlers/utils/: facet_factory.py  moles_datasets.py
cci_facet_scanner/core/: elasticsearch_connection.py  facet_scanner.py
cci_facet_scanner/file_handlers/: handler_factory.py  netcdf.py
cci_facet_scanner/scripts/: check_json.py  check_tags.py  command_line_client.py  dump_facet_object.py  facet_scanner_cmd.py  find_superseded.py  lotus_facet_scanner.py
cci_facet_scanner/tagging/: dataset.py  facets.py  tagger.py
cci_facet_scanner/templates/: README.md
cci_facet_scanner/tests/: test_consistency.py  v2_endpoint.py
cci_facet_scanner/tests/handlers/: oldtest_cci.py
cci_facet_scanner/utils/: __init__.py  constants.py  dataset_jsons.py  decorators.py  elasticsearch.py  settings.py  snippets.py
docs/: adding_a_handler.rst  conf.py  configuration.rst  index.rst  requirements.txt  usage.rst
docs/api/: collection_handlers.rst  scripts.rst
facet_scanner/: __init__.py
facet_scanner/collection_handlers/: base.py  cci.py  cmip5.py
facet_scanner/collection_handlers/util/: __init__.py  collection_map.py  facet_factory.py  moles_datasets.py
facet_scanner/collection_handlers/utils/: __init__.py  facet_factory.py  moles_datasets.py
facet_scanner/conf/: facet_scanner.ini  facet_scanner.ini.tmpl
facet_scanner/core/: elasticsearch_connection.py  facet_scanner.py
facet_scanner/scripts/: facet_scanner.py  facet_scanner_cmd.py  lotus_facet_scanner.py
facet_scanner/tests/: test_consistency.py
facet_scanner/tests/handlers/: test_cci.py
facet_scanner/util/: __init__.py  snippets.py
facet_scanner/utils/: snippets.py
