[project]
name = "facet-scanner"
version = "0.2.0"
description = "Extracts facets from datasets to add to elasticsearch."
authors = [
    { name = "Daniel Westwood", email = "daniel.westwood@stfc.ac.uk"}
]
license = "BSD 3"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
include = [
    { path = "conf/facet_scanner.ini" },
    { path = "scripts/lotus_worker.sh" }
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "elasticsearch (>=7,<8)", 
    "requests (>=2.32.3,<3.0.0)", 
    "tqdm (>=4.66.6,<5.0.0)", 
    "sphinx (>=7,<8)", 
    "pytest (>=8.3.3,<9.0.0)"
]

#ceda-elasticsearch-tools = { git = "https://github.com/cedadev/ceda-elasticsearch-tools.git", tag = "v2.4.0" }
#tag-scanner = { git = "https://github.com/cedadev/cci-tag-scanner.git", tag = "v2.1.9" }



[project.scripts]
facet_scanner = "facet_scanner.scripts.facet_scanner_cmd:FacetExtractor.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
