[project]
name = "cci-facet-scanner"
version = "0.8.0"
description = "Extracts facets from datasets to add to elasticsearch."
authors = [
    { name = "Daniel Westwood", email = "daniel.westwood@stfc.ac.uk"}
]
license = "BSD 3"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
include = [
    { path = "conf/facet_scanner.ini" },
    { path = "scripts/lotus_worker.sh" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "elasticsearch (>=8, <9)", 
    "requests (>=2.32.3,<3.0.0)", 
    "tqdm (>=4.66.6,<5.0.0)", 
    "sphinx (>=7,<8)", 
    "verboselogs>=1.7",
    "jinja2 (>=3,<4)",
    "numpy (>=2,<3)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "six (>=1.16.0,<2.0.0)",
    "ceda-directory-tree (>=1.2.0)",
    "urllib3 (>=2.7.0,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
poetry = "^2"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^3.0.2"
isort = "^8.0.1"

[project.scripts]
facet_scanner = "facet_scanner.scripts.facet_scanner_cmd:FacetExtractor.main"
moles_esgf_tag = "cci_tag_scanner.scripts:CCITaggerCommandLineClient.main"
cci_json_check = "cci_tag_scanner.scripts:TestJSONFile.cmd"
cci_check_tags = "cci_tag_scanner.scripts.check_tags:main"
export_facet_json = "cci_tag_scanner.scripts.dump_facet_object:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
